--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "server",
-	"description": "Feathers Starter Kit",
-	"version": "0.1.0",
+	"description": "Feathers Server for Chartbee Team Tool",
+	"version": "1.0.0",
 	"homepage": "",
 	"private": true,
 	"main": "src",
@@ -12,6 +12,7 @@
 		"name": "Monarch Maisuriya",
 		"email": "monarchmaisuriya7600@gmail.com"
 	},
+	"contributors": [],
 	"bugs": {},
 	"directories": {
 		"lib": "src",
@@ -19,17 +20,31 @@
 		"config": "config/"
 	},
 	"engines": {
-		"node": "^13.0.0",
-		"npm": ">= 3.0.0",
-		"yarn": "YARN NO LONGER USED - use npm instead."
+		"node": "^16.0.0",
+		"npm": ">= 3.0.0"
 	},
 	"scripts": {
 		"test": "npm run lint && npm run mocha",
 		"lint": "eslint --fix .",
-		"format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-		"dev": "NODE_ENV=development DEBUG=feathers-starter nodemon --trace-deprecation --trace-warnings src/server.js",
-		"start": "NODE_ENV=production node --trace-deprecation --trace-warnings src/server.js",
-		"mocha": "mocha test/ --recursive --exit"
+		"format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettier.config.js",
+		"dev": "nodemon --trace-deprecation --trace-warnings src/server.js | npx bunyan -o short",
+		"start": "node src/server.js | npx bunyan -o short",
+		"mocha": "mocha test/ --recursive --exit",
+		"migrate:up": "npx sequelize db:migrate",
+		"migrate:down": "npx sequelize db:migrate:undo"
+	},
+	"_moduleAliases": {
+		"@app": "src/app",
+		"@channels": "src/channels",
+		"@database": "src/database",
+		"@errors": "src/errors",
+		"@hooks": "src/hooks",
+		"@helpers": "src/helpers",
+		"@integrations": "src/integrations",
+		"@models": "src/models",
+		"@middleware": "src/middleware",
+		"@services": "src/services",
+		"@utils": "src/utils"
 	},
 	"standard": {
 		"env": [
@@ -37,56 +52,41 @@
 		],
 		"ignore": []
 	},
-	"_moduleAliases": {
-		"@app": "src/app",
-		"@models": "src/models",
-		"@database": "src/database",
-		"@channels": "src/channels",
-		"@middleware": "src/middleware",
-		"@services": "src/services",
-		"@hooks": "src/hooks",
-		"@errors": "src/errors",
-		"@utils": "src/utils"
-	},
 	"dependencies": {
-		"@feathersjs/authentication": "^4.5.3",
-		"@feathersjs/authentication-local": "^4.5.4",
-		"@feathersjs/authentication-oauth": "^4.5.4",
-		"@feathersjs/configuration": "^4.5.3",
-		"@feathersjs/errors": "^4.5.8",
-		"@feathersjs/express": "^4.5.4",
-		"@feathersjs/feathers": "^4.5.3",
-		"@feathersjs/socketio": "^4.5.4",
-		"@feathersjs/transport-commons": "^4.5.3",
-		"axios": "^0.21.1",
+		"@feathersjs/authentication": "^4.5.11",
+		"@feathersjs/authentication-local": "^4.5.11",
+		"@feathersjs/configuration": "^4.5.11",
+		"@feathersjs/errors": "^4.5.11",
+		"@feathersjs/express": "^4.5.11",
+		"@feathersjs/feathers": "^4.5.11",
+		"@feathersjs/transport-commons": "^4.5.11",
+		"@sendgrid/mail": "^7.6.0",
+		"bunyan": "^1.8.15",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
-		"debug": "^4.3.2",
-		"dotenv": "^8.2.0",
+		"dotenv": "^10.0.0",
 		"feathers-authentication-hooks": "^1.0.2",
-		"feathers-authentication-management": "^3.0.1",
-		"feathers-errors": "^2.9.2",
-		"feathers-hooks-common": "^5.0.4",
-		"feathers-mailer": "^3.0.1",
-		"feathers-mongodb": "^6.1.0",
-		"feathers-mongoose": "^8.3.0",
+		"feathers-authentication-management": "^3.1.0",
+		"feathers-hooks-common": "^5.0.6",
 		"feathers-permissions": "^2.1.4",
-		"helmet": "^3.22.0",
-		"localenv": "^0.2.2",
+		"feathers-sequelize": "^6.2.0",
+		"helmet": "^4.6.0",
+		"lodash": "^4.17.21",
 		"module-alias": "^2.2.2",
-		"mongodb": "^3.5.9",
-		"mongodb-core": "^3.2.7",
-		"mongoose": "^5.9.16",
-		"nodemailer-smtp-transport": "^2.4.2",
-		"serve-favicon": "^2.5.0",
-		"winston": "^3.3.3"
+		"morgan": "^1.10.0",
+		"pg": "^8.6.0",
+		"rate-limiter-flexible": "^2.3.5",
+		"sequelize": "^6.6.5",
+		"sequelize-cli": "^6.2.0",
+		"superagent": "^6.1.0",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
-		"eslint": "^7.8.1",
-		"eslint-config-prettier": "^8.2.0",
-		"eslint-plugin-prettier": "^3.4.0",
-		"mocha": "^7.2.0",
-		"nodemon": "^2.0.4",
-		"prettier": "^2.2.1"
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"faker": "^5.5.3",
+		"mocha": "^8.4.0",
+		"nodemon": "^2.0.12"
 	}
 }
